The symmetry of the brush in sculpture mode only mirrors position but not rotation. #110328

Closed
opened 2023-07-21 01:26:47 +02:00 by Ciblender · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-19 23:42, hash: 08f4f1f41e52
Worked: 3.6

Caused by 351034891e

Brief description of the error
[use a clay strips brush to make it visible:

  • the brush pattern does not behave as a mirror as it should, but as a copy of it]

Exact steps for others to reproduce the bug

  • Go to the sculpture workspace.
  • activate symmetry in x.
  • select the Clay Strips brush.
  • paint near the axis of symmetry to better evaluate.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.40 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-19 23:42, hash: `08f4f1f41e52` Worked: 3.6 Caused by 351034891e **Brief description of the error** [use a clay strips brush to make it visible: - the brush pattern does not behave as a mirror as it should, but as a copy of it] **Exact steps for others to reproduce the bug** - Go to the sculpture workspace. - activate symmetry in x. - select the Clay Strips brush. - paint near the axis of symmetry to better evaluate.
Ciblender added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-21 01:26:48 +02:00
Member

Can confirm, indeed the rotation is not mirrored, only position.

Working correctly on 4.0 dc5b99fa49

Caused by 351034891e cc @JosephEagar

Can confirm, indeed the rotation is not mirrored, only position. Working correctly on 4.0 dc5b99fa499d Caused by 351034891e433e8324820 cc @JosephEagar
YimingWu changed title from The symmetry of the brush in sculpture mode does not work correctly. to The symmetry of the brush in sculpture mode only mirrors position but not rotation. 2023-07-21 04:23:32 +02:00
Member

Caused by 351034891e

@JosephEagar ^


@ChengduLittleA , tagging in edited message don't send email to that person 😅

> Caused by 351034891e @JosephEagar ^ - - - @ChengduLittleA , tagging in edited message don't send email to that person 😅
Member

@PratikPB2123 Ahh okay 😅 thanks!

@PratikPB2123 Ahh okay 😅 thanks!
Author

@ChengduLittleA Is the bug report ok? This is the second report I've made and the first one was denied for not being in Main. Also I'm not speaking English and I don't know if the google translator is doing a really good job.

@ChengduLittleA Is the bug report ok? This is the second report I've made and the first one was denied for not being in Main. Also I'm not speaking English and I don't know if the google translator is doing a really good job.
Member

@Ciblender It's okay. I'm not aware the first one was denied, maybe you was using a sculpt branch and reported bug that way? But here the bug is valid and we found the cause, so it's just the matter of fixing it. It will land in 4.0.

@Ciblender It's okay. I'm not aware the first one was denied, maybe you was using a sculpt branch and reported bug that way? But here the bug is valid and we found the cause, so it's just the matter of fixing it. It will land in 4.0.
Author

Yes, it was in another branch of sculpture and another error, don't worry, it was to let you know my little experience reporting errors and maybe it wasn't right or I was missing something. The other error you redirected me to blender chat and everything went very well. Thank you very much for all your attention. ❤

Yes, it was in another branch of sculpture and another error, don't worry, it was to let you know my little experience reporting errors and maybe it wasn't right or I was missing something. The other error you redirected me to blender chat and everything went very well. Thank you very much for all your attention. ❤
Julien Kaspar added
Type
Bug
and removed
Type
Report
labels 2023-07-31 16:10:05 +02:00
Member

@Sergey would any of you have time to work on this?

@Sergey would any of you have time to work on this?
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-23 12:23:02 +02:00
Author

@JulienKaspar @Sergey .Thank you very much, now it works great.

@JulienKaspar @Sergey .Thank you very much, now it works great.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110328
No description provided.