source/blender/editors/sculpt_paint/sculpt_intern.hh
@@ -1260,12 +1260,7 @@ SculptBrushTestFn SCULPT_brush_test_init_with_falloff_shape(SculptSession *ss,
                                                             char falloff_shape);
 const float *SCULPT_brush_frontface_normal_from_falloff_shape(SculptSession *ss,
                                                               char falloff_shape);
-void SCULPT_cube_tip_init(Sculpt *sd,
-                          Object *ob,
-                          Brush *brush,
-                          float mat[4][4],
-                          const float *co = nullptr,  /* Custom brush center. */
-                          const float *no = nullptr); /* Custom brush normal. */
+void SCULPT_cube_tip_init(Sculpt *sd, Object *ob, Brush *brush, float mat[4][4]);
 
 /**
  * Return a multiplier for brush strength on a particular vertex.
